feat: 웨이브 몬스터 정상화